# programmering

./: .gitignore  README.md  assignment.cpp  autoparam.cpp  avl_tree.cpp  bitmap_enums.cpp  braced-init-list-c98.cpp  braced-init-list.cpp  braces.cpp  bracka.cpp  buffered.cpp  check_clang.cpp  circular_buffer.cpp  constexpr.cpp  copy-reference.cpp  copy_vs_move.cpp  cstdio.cpp  delegating.cpp  delete_ctor.cpp  deref.cpp  destruct.cpp  doxytest.cpp  enable_if.cpp  enum_variant.cpp  enums.cpp  exceptions.cpp  expiring_deque.cpp  factory.cpp  ff.cpp  fibonacci.lsp  force_override.cpp  fortetest.cpp  fun.cpp  function_template_parameter.cpp  gcc_ver.c  getinteger.c  hash.cpp  hash_table.cpp  heap_sort.cpp  hello.c  (+87 more)
aoc20/: main.cpp
bazellek/main/: hello.cpp
bokstav/: .gitignore  bokstav.cpp
cmakelek/: CMakeLists.txt  foo.sh  hello.cpp  myheader1.h
electronics_shop/: CMakeLists.txt  lci.cpp  main.cpp  main_exhaustive.cpp
electronics_shop/tests/: test5.txt
hackerrank/bfs/: main.cpp
heapsort/: CMakeLists.txt  heapsort.hpp
heapsort/tests/: CMakeLists.txt  test.cpp
kotlin/Atm/: Atm.kt  BUILD.bazel  Command.kt  CommandRouter.kt  CommandRouterFactory.kt  HelloWorldCommand.kt  HelloWorldModule.kt  Main.kt  WORKSPACE
python/: argparselek.py  dekorator.py  foldr.py  generator.py  quicksort.py
python/aoc/: aoc5.py
python/paketlek/paket/: __main__.py  modul.py
python/paketlek/paket/subpaket/: submodul.py
rust/: hello.rs
rust/ffi/: CMakeLists.txt  ffi.cpp  main.rs
