load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

java_plugin(
    name = "dagger_plugin",
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    deps = [
        "@maven//:com_google_dagger_dagger_compiler",
    ],
)

java_library(
    name = "dagger",
    exported_plugins = [":dagger_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_google_dagger_dagger",
        "@maven//:com_google_dagger_dagger_compiler",
        "@maven//:javax_inject_javax_inject",
    ],
)

kt_jvm_binary(
    name = "atm",
    srcs = [
        "Atm.kt",
        "Command.kt",
        "CommandRouter.kt",
        "CommandRouterFactory.kt",
        "HelloWorldCommand.kt",
        "Main.kt",
    ],
    main_class = "MainKt",
    visibility = [
        "//java/fr/enoent/phosphorus:__subpackages__",
        "//javatests/fr/enoent/phosphorus:__subpackages__",
    ],
    deps = ["dagger"],
)
